# solana-youtube-token-trading

./: Cargo.toml  ecosystem.config.js  package-lock.json
backend/: .gitignore  index.js  package-lock.json  package.json
backend/clients/: amm_client.js  amm_test.js  create_token.js  dummy.js  fetch_metrics.js  swap_client.js  token_verify.js
backend/services/: listener.js  socket.js
backend/src/config/: passport.js
backend/src/controllers/: authController.js  marketController.js  profileController.js  tokenController.js  walletController.js
backend/src/middlewares/: authMiddleware.js
backend/src/models/: token.js  userModel.js
backend/src/routes/: authRoutes.js  marketRoutes.js  profileRoutes.js  tokenRoutes.js  walletRoutes.js
backend/utils/: ataService.js  db.js  fetch_metrics.js  fetch_metrics.py  solana.js
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: navbar.tsx  poolDetails.tsx
frontend/src/components/ui/: input.tsx  skeleton.tsx  tokenCard.tsx
frontend/src/pages/: OAuthCallbackPage.tsx  buyTokenPage.tsx  createTokenPage.tsx  deposit.tsx  homepage.tsx  market.tsx  marketPage.tsx  profilePage.tsx  signUpPage.tsx  tokenPage.tsx
smartcontracts/programs/amm/: Cargo.toml
smartcontracts/programs/amm/src/: lib.rs
smartcontracts/programs/create_token/: Cargo.toml
smartcontracts/programs/create_token/src/: lib.rs
