[package]
name = "create_token"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # <--- This is mandatory for Solana smart contracts

[dependencies]
borsh = "1.5.7"
mpl-token-metadata = "5.1.0"
solana-program = "2.2.1"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }

